<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item1"
        android:title="@string/item1"/>
    <item android:id="@id/item2"
        android:title="@string/item2"/>
    <item android:id="@id/item3"
        android:title="@string/item3"/>
    <item android:id="@id/item4"
        android:title="@string/item4"/>
    <item android:id="@+id/item5"
        android:title="@string/item5"/>
    <!--<item
        android:id="@+id/m_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionLayout="@layout/search_view_layout"
        app:showAsAction="ifRoom|collapseActionView" />-->

</menu>